Update room map for receptionist